refactor: FreeCell rewrite